Am adaugat o entitate in baza de date pentru utilizatori.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tema1-Android</string>
+    <string name="app_name">NutriSense</string>
     <string name="login">Login</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
