Am schimbat aspectul aplicatiei.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,54 @@
     <string name="quick_stats">Quick Stats</string>
     <string name="bmi_calculate_in_settings">BMI: Calculate in settings</string>
     <string name="last_weight_update_never">Last weight update: Never</string>
-    <string name="settings_amp_goals"><![CDATA[⚙️ Settings & Goals]]></string>
+    <string name="settings_amp_goals"><![CDATA[ Settings & Goals]]></string>
+    <string name="calculate_food_nutrition">Calculate Food Nutrition</string>
+    <string name="view_food_history">View Food History</string>
+    <string name="recipe_search">Recipe Search</string>
+    <string name="recipe_collection">Recipe Collection</string>
+    <string name="recipe_summary">Recipe Summary</string>
+    <string name="your_recipe_collection">Your Recipe Collection</string>
+    <string name="all_recipes_you_ve_searched_for_are_saved_here_you_can">All recipes you\'ve searched for are saved here. You can:</string>
+    <string name="mark_recipes_as_favorites_n_delete_recipes_from_your_collection_n_view_detailed_recipe_information_n_see_cooking_instructions">• ⭐ Mark recipes as favorites\n• 🗑️ Delete recipes from your collection\n• 📖 View detailed recipe information\n• 👨‍🍳 See cooking instructions</string>
+    <string name="no_recipes_in_your_collection_yet_use_recipe_search_to_discover_delicious_recipes">No recipes in your collection yet. Use \'Recipe Search\' to discover delicious recipes!</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="enter_ingredients_to_find_recipes">Enter ingredients to find recipes:</string>
+    <string name="e_g_chicken_rice_tomato">e.g., chicken, rice, tomato</string>
+    <string name="recipe_results">Recipe Results</string>
+    <string name="no_recipes_found_yet_search_for_ingredients_to_discover_delicious_recipes">No recipes found yet. Search for ingredients to discover delicious recipes!</string>
+    <string name="complete_registration">Complete Registration</string>
+    <string name="tell_us_a_bit_about_yourself">Tell us a bit about yourself:</string>
+    <string name="create_account">Create Account</string>
+    <string name="back_to_login">Back to Login</string>
+    <string name="food_search_history">Food Search History</string>
+    <string name="today_s_summary">Today\'s Summary</string>
+    <string name="no_foods_consumed_today">No foods consumed today</string>
+    <string name="your_food_database">Your Food Database</string>
+    <string name="all_foods_you_ve_searched_for_are_saved_here_you_can">All foods you\'ve searched for are saved here. You can:</string>
+    <string name="mark_foods_as_favorites_n_mark_foods_as_consumed_today_n_delete_foods_from_your_database_n_view_detailed_nutrition_information">• ⭐ Mark foods as favorites\n• ✅ Mark foods as consumed today\n• 🗑️ Delete foods from your database\n• 📊 View detailed nutrition information</string>
+    <string name="no_foods_in_your_database_yet_use_calculate_nutrition_to_add_foods">No foods in your database yet. Use \'Calculate Nutrition\' to add foods!</string>
+    <string name="personal_information">👤 Personal Information</string>
+    <string name="weight_amp_height"><![CDATA[Weight & Height:]]></string>
+    <string name="calorie_goal_kcal_day">Calorie Goal (kcal/day):</string>
+    <string name="water_goal_ml_day">Water Goal (ml/day):</string>
+    <string name="calculate_recommended_goals">Calculate Recommended Goals</string>
+    <string name="reminder_settings">Reminder Settings:</string>
+    <string name="water_reminder_interval_minutes">Water Reminder Interval (minutes):</string>
+    <string name="save_all_settings">💾 Save All Settings</string>
+    <string name="food_name">Food Name</string>
+    <string name="search_original_query">Search: original query</string>
+    <string name="toggle_favorite">Toggle Favorite</string>
+    <string name="mark_as_consumed">Mark as Consumed</string>
+    <string name="delete_food">Delete Food</string>
+    <string name="not_consumed">⏳ Not consumed</string>
+    <string name="_100g">100g</string>
+    <string name="_0_kcal">0 kcal</string>
+    <string name="protein_0g">Protein: 0g</string>
+    <string name="carbs_0g">Carbs: 0g</string>
+    <string name="fat_0g">Fat: 0g</string>
+    <string name="added_today">Added: Today</string>
+    <string name="recipe_title">Recipe Title</string>
+    <string name="delete_recipe">Delete Recipe</string>
+    <string name="servings_4">Servings: 4</string>
+    <string name="ingredients_chicken_rice_vegetables">Ingredients: chicken, rice, vegetables...</string>
 </resources>
